tests/code1.hai
// test - ( ,+ - * / =

x =
 y =  (-1 + 10) - 5 * 4 / 2 + -- 7;

/// test LR-Paren match

// (1)) // error
//(
//((1))
//)


/// test || &&

x = 1 && 0  && 777|| 2 && 4 || 1 || 2 || 0;




/// test StrLit CharLit

x = "1234  ";
//y = "1234 '; //error
//z='; // error